--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
         .coming-soon h1 {
             font-size: 3em;
             margin-bottom: 0.5em;
-            background: -webkit-linear-gradient(#B111D9, #17A4D0);
+            background: linear-gradient(#B111D9, #17A4D0);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
+            background-clip: text;
+            color: transparent;
         }
         .coming-soon p {
             font-size: 1.5em;
