--- a/index.html
+++ b/index.html
@@ -7,40 +7,61 @@
     <style>
         body {
             display: flex;
+            flex-direction: column;
             justify-content: center;
             align-items: center;
             height: 100vh;
             background-color: #ffffff;
             font-family: Arial, sans-serif;
             margin: 0;
+            overflow: hidden;
+            position: relative;
+            color: #333;
         }
         .coming-soon {
             text-align: center;
+            z-index: 1;
         }
         .coming-soon h1 {
             font-size: 3em;
             margin-bottom: 0.5em;
-            background: linear-gradient(#B111D9, #17A4D0);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            background-clip: text;
-            color: transparent;
         }
         .coming-soon p {
             font-size: 1.5em;
             color: #666;
+            margin-bottom: 1em;
         }
         .logo {
-            width: 300px; /* Adjust the width as needed */
+            width: 150px; /* Adjust the width as needed */
             margin-bottom: 1em;
+        }
+        .circle1, .circle2 {
+            position: absolute;
+            border-radius: 50%;
+            background: radial-gradient(circle, rgba(177, 17, 217, 0.5), rgba(23, 164, 208, 0.5));
+            z-index: 0;
+        }
+        .circle1 {
+            width: 300px;
+            height: 300px;
+            top: 100px;
+            left: -100px;
+        }
+        .circle2 {
+            width: 300px;
+            height: 300px;
+            bottom: -100px;
+            right: -100px;
         }
     </style>
 </head>
 <body>
+    <div class="circle1"></div>
+    <div class="circle2"></div>
     <div class="coming-soon">
         <img src="finalnewfpls-01.jpg" alt="FPL Moneyball Logo" class="logo">
-        <h1>Coming Soon</h1>
-        <p>Our website is under construction. Stay tuned!</p>
+        <h1>Great things coming soon.</h1>
+        <p>This website is currently under construction, exciting times ahead.</p>
     </div>
 </body>
 </html>
