--- a/index.html
+++ b/index.html
@@ -16,22 +16,26 @@
             margin: 0;
             padding: 0;
             text-align: center;
+            position: relative;
         }
         .logo {
-            width: 200px; /* Adjust the logo size as needed */
-            margin-bottom: 20px;
+            width: 400px; /* Adjust the logo size as needed */
+            position: absolute;
+            top: 20px;
         }
         .content {
             max-width: 800px;
             padding: 20px;
+            margin-top: 200px; /* Adjust to position the text correctly */
+            text-align: center;
         }
         .content h1 {
-            font-size: 3em; /* Bigger font size for "New Website" */
+            font-size: 3.5em; /* Bigger font size for "New Website" */
             margin: 0;
             color: #1a1a1a;
         }
         .content h2 {
-            font-size: 3em; /* Bigger font size for "Coming Soon" */
+            font-size: 3.5em; /* Bigger font size for "Coming Soon" */
             margin: 0;
             background: linear-gradient(to right, #B111D9, #17A4D0);
             -webkit-background-clip: text;
@@ -40,7 +44,7 @@
             color: transparent;
         }
         .content p {
-            font-size: 1.2em;
+            font-size: 1.5em; /* Increase font size */
             color: #666;
             margin-top: 10px;
         }
@@ -55,4 +59,3 @@
     </div>
 </body>
 </html>
-
