--- a/index.html
+++ b/index.html
@@ -19,23 +19,24 @@
             position: relative;
         }
         .logo {
-            width: 400px; /* Adjust the logo size as needed */
+            width: 800px; /* Adjust the logo size as needed */
             position: absolute;
-            top: 20px;
+            top: 10px;
+            left: 20px; /* Move the logo to the left-hand side */
         }
         .content {
             max-width: 800px;
             padding: 20px;
-            margin-top: 200px; /* Adjust to position the text correctly */
+            margin-top: 100px; /* Adjust to position the text correctly */
             text-align: center;
         }
         .content h1 {
-            font-size: 3.5em; /* Bigger font size for "New Website" */
+            font-size: 6.5em; /* Bigger font size for "New Website" */
             margin: 0;
             color: #1a1a1a;
         }
         .content h2 {
-            font-size: 3.5em; /* Bigger font size for "Coming Soon" */
+            font-size: 6.5em; /* Bigger font size for "Coming Soon" */
             margin: 0;
             background: linear-gradient(to right, #B111D9, #17A4D0);
             -webkit-background-clip: text;
